# esp32c3-embassy

./: Cargo.toml  Readme.txt
src/: gpio.rs  main.rs
