[package]
name = "esp32c3-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { path = "../esp-hal/esp32c3-hal" }
riscv-rt = { version = "0.9.0" }
panic-halt = "0.2.0"

#riscv          = "0.8.0"
