[package]
name = "esp32c3-embassy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { path = "../esp-hal/esp32c3-hal" }
riscv-rt = { version = "0.9.0" }
panic-halt = "0.2.0"
#embassy-executor = { path = "../../embassy/embassy-executor/", arget_arch="riscv32", feature="nightly" }
#embassy-executor = { version = "0.1.0", path = "../../embassy/embassy-executor", features = ["defmt", "nightly"] }
embassy-executor = { version = "0.1.0", path = "../../embassy/embassy-executor", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../../embassy/embassy-time", features = ["nightly", "tick-16mhz"] }


#riscv          = "0.8.0"
